--- a/style.css
+++ b/style.css
@@ -46,7 +46,11 @@ header{
   align-items: center;
   padding: 18px 100px;
   transition: 0.5s linear;
+}
+
+header.shadow{
   background: var(--text-color);
+  box-shadow: var(--box-shadow);
 }
 .logo img{
   width: 60px;
@@ -58,12 +62,12 @@ header{
 
 .navbar a{
   padding: 9px 17px;
-  color: var(--bg-color);
+  color: rgb(148, 73, 73);
   font-size: 1rem;
   text-transform: uppercase;
   font-weight: bold;
   &:hover{
-    background: var(--main-color);
+    background : var(--main-color);
     border-radius: 0.2rem;
     transition: 0.2s all linear;
   }
@@ -120,7 +124,7 @@ color: var(--bg-color);
 .home{
   width: 100%;
   min-height: 100vh;
-  background: url(images/bg.jpg);
+  background: url(images/bgr.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -179,3 +183,214 @@ margin: 0.5rem 0 1.1rem;
   font-size: 1.8rem;
   text-transform: uppercase;
 }
+
+.products-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px,auto));
+  align-items: center;
+  gap: 1.5rem;
+  margin-top: 2rem;
+}
+.products-container .box{
+  position: relative;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 0.5rem;
+  box-shadow: var(--box-shadow);
+
+}
+.products-container img{
+  width: 100%;
+  height: 250px;
+  object-fit: contain;
+  object-position: center ;
+  padding: 20px;
+  background: white;
+  border-radius: 0.5rem;
+}
+
+.products-container .box h3{
+  font-size: 1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin: 0.5rem 0 0.5rem;
+}
+.products-container .box .content{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.products-container .box .content span{
+  padding: 0 1rem ;
+  color: rgb(214, 178, 178);
+  background-color: rgb(54, 72, 54);
+  border-radius: 8px;
+  font-weight: 400;
+}
+
+.products-container .box .content a{
+  padding: 0 1rem ;
+  color: var(--text-color);
+  border: 2px solid rgb(54, 72, 54);
+  border-radius: 7px;
+  font-weight: 400;
+  text-transform: uppercase;
+  &:hover{
+    background-color: rgb(45, 67, 45);
+    color: var(--bg-color);
+    transition: 0.2 all linear;
+  }
+}
+
+.customers-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px,auto));
+  align-items: center;
+  gap: 1.5rem;
+  margin-top: 2rem;
+}
+
+.customers-container .box{
+  padding: 20px;
+ box-shadow: var(--box-shadow);
+ border-radius: 0.5rem;
+ text-align: center;
+ &:hover{
+  background: var(--second-color);
+  transition: 0.2s all linear;
+  cursor: pointer;
+
+ }
+}
+
+.stars .bx{
+  color: var(--main-color);
+}
+
+.customers-container .box p{
+  font-size: 1rem;
+}
+.customers-container .box h2{
+  font-size: 1.3rem;
+  font-weight: 600;
+  margin: 0.5rem o 0.5rem;
+}
+.customers-container .box img{
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.footer{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px,auto));
+  gap: 1.5rem;
+ 
+}
+
+.footer-box h2{
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.footer-box p{
+  font-size: 1rem;
+  margin-bottom: 10px;
+}
+
+.social{
+  display: flex;
+  align-items: center;
+  column-gap: 0.5rem;
+}
+
+.social a .bx{
+  font-size: 24px;
+  color: var(--text-color);
+  padding: 10px;
+  background: var(--second-color);
+  border-radius: 0.2rem;
+  &:hover{
+    color: white;
+    background-color: burlywood;
+    cursor: pointer;
+    transition: 0.2s all linear;
+  }
+}
+
+.footer-box h3{
+ font-weight: 600;
+ margin-bottom: 10px;
+}
+
+.footer-box li a{
+  color: var(--text-color);
+  &:hover{
+    color: burlywood ;
+    cursor: pointer;
+    transition: 0.2s all linear;
+  }
+  }
+
+  .contact{
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+  }
+  .contact span{
+    display: flex;
+    align-items: center;
+  }
+
+  .contact i{
+    font-size: 20px;
+    margin-right: 1rem;
+  }
+
+  @media (max-width: 991px){
+    header{
+      padding: 16px 4%;
+    }
+    section {
+      padding: 50px 4%;
+    }
+    .home-text h1{
+      font-size: 2rem;
+    }
+  }
+
+  @media (max-width: 76px){
+    header{
+      padding: 12px 4%;
+    }
+    #menu-icon{
+      display: initial;
+    }
+    .navbar{
+      position: absolute;
+      top: -570px;
+      left: 0;
+      right: 0;
+      display: flex;
+      flex-direction: column;
+      background-color: var(--second-color);
+      row-gap: 1.4rem;
+      padding: 20px;
+      transition: 0.2s;
+      text-align: center;
+    }
+    .navbar a{
+      color: var(--text-color);
+      &:hover{
+        color: var(--bg-color);
+      }
+    }
+    .navbar.active{
+      top: 100%;
+    }
+  }
